added GET /{speakerName}/nowPlaying
